fix: 챌린지 기한 만료 시 자동으로 완료 처리되도록 수정